<resources>
    <string name="app_name">LTechApp</string>
    <!-- Strings related to login -->
    <string name="keep_phone_number">Введите номер телефона</string>
    <string name="keep_password">Введите пароль</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_account">Вход в аккаунт</string>
    <string name="news_feed">Лента новостей</string>
    <string name="title_menu_profile">Аккаунт</string>
    <string name="title_menu_favourite">Избранное</string>
    <string name="title_menu_home">Главная</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="default_sort">По умолчанию</string>
    <string name="date_sort">По дате</string>
    <string name="test">8ef3-03373df2bds familiar., image=/uploads/post/image/86ed7d8c-9e9e-4dd7-b5a0-d04e2fa16db1/thumb_4_image_3.jpg, sort=-10, date=2022-11-08T11:01:34Z), News(id=35ca50e2-b561-4cce-93a6-6be23a59c52c, title=Chaos Knight, text=Definitions are important., image=/uploads/post/ima</string>
    <string name="sort">Сортировка</string>
    <string name="exit">Выход</string>
    <string name="to_news">К новостям</string>

</resources>