<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bottom_sort_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/sort"
        android:textColor="@color/black"
        android:textSize="@dimen/bottom_title_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/close_dialog"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/icon_close"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_sort_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ChooseSortRadioBtn"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sort_tv">

        <RadioButton
            android:id="@+id/sortDefaultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginVertical="@dimen/small_margin"
            android:checked="true"
            android:layoutDirection="rtl"
            android:text="@string/default_sort"
            android:textSize="@dimen/default_text_size" />


        <View
            android:id="@+id/elevation_from_sort"
            android:layout_width="match_parent"
            android:layout_height="@dimen/elevation_size"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioButton
            android:id="@+id/sortByDateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layoutDirection="rtl"
            android:text="@string/date_sort"
            android:textSize="@dimen/default_text_size" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>