<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context="com.example.ltechapp.presentation.login.LoginFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_ltech"
        android:id="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_acc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:textSize="@dimen/title_text_size"
        android:text="@string/sign_in_account"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/big_margin"
        />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_ll_margin"
        android:id="@+id/phone_fl"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_acc"
        >

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_margin"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:inputType="phone"
            android:paddingStart="@dimen/default_margin"
            android:background="@drawable/round_corners_white"
            android:paddingEnd="@dimen/default_margin"
            android:text="+7"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:lines="1"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/small_margin"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clear_phone"
            android:layout_gravity="end|center"
            android:src="@drawable/clear_phone"
            app:layout_constraintEnd_toEndOf="@+id/phone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/default_margin"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>








    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_margin"
        android:id="@+id/password_fl"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_fl"
        >

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_margin"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:paddingStart="@dimen/default_margin"
            android:background="@drawable/round_corners_white"
            android:paddingEnd="@dimen/default_margin"
            android:hint="@string/keep_password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:lines="1"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status_password"
            android:layout_gravity="end|center"
            android:src="@drawable/show_password"
            app:layout_constraintEnd_toEndOf="@+id/password_et"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/default_margin"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"
        app:backgroundTint="@color/gray"
        app:cornerRadius="@dimen/default_corner_radius"
        android:paddingEnd="27dp"
        android:paddingStart="27dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:enabled="false"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_fl"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeWidth="1dp"
        app:strokeColor="@color/light_gray"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_fl"
        app:layout_constraintStart_toStartOf="@+id/password_fl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>